# viplanner

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.Jetson  README.md  TRAINING.md  cost_builder.py  depth_reconstruct.py  esdf_mapping.py  eval_hierach.py  eval_real.py  eval_sim.py  m2f_overfit.py  matterport_all.py  multi_env.py  package.xml  pyproject.toml  requirements.txt  rosbag_modifier.py  segments_download.py  segments_prelabel.py  topics.txt  tsdf_map.py
config/: __init__.py  coco_meta.py  config.py  costmap_cfg.py  default.yaml  learning_cfg.py  legged_robot.yaml  legged_sim.yaml  loss_carla.py  loss_matterport.py  m2f.yaml  robot.yaml  semantic_cfg.py  sim.yaml  vehicle.yaml  vehicle_sim.yaml  viplanner_sem_meta.py
cost_maps/: __init__.py  cost_to_pcd.py  esdf_mapping.py  sem_cost_map.py  tsdf_cost_map.py
dataset/: __init__.py  dataloader.py  dataset.py  dataset_old.py
dvf_planner/: PlannerNet.py  autoencoder.py  rosutil.py  temp_save.py  traj_opt.py  traj_viz.py  trajectory.py  tsdf_map.py  visualizer.py
launch/: dvf_planner.launch  path_follower.launch  planner_viz.launch  rosbag_rec.launch  vi_planner.launch  viplanner.launch  viplanner_viz.launch
model_src/: coco_meta.py  m2f_inference.py  vip_inference.py
models/: coco_panoptic
omniverse/: README.md
omniverse/standalone/: _bootstrap.py  data_collect.py  play_anymal_d_flat.py  ros2_carla_anymal_d_teleop.py  train_anymal_d_velocity.py  viplanner_demo.py
planner/config/: anymal_c.yaml  anymal_d.yaml  legged_sim.yaml
planner/launch/: viplanner.launch
planner/model_src/: m2f_inference.py  vip_inference.py  viplanner_sem_meta.py
planner/models/: coco_panoptic  vip_models
planner/src/: viplanner_node.py
plannernet/: PlannerNet.py  __init__.py  autoencoder.py  rgb_encoder.py
reconstruction/: depth_reconstruct.py
ros/: INSTALL.md  README.md
ros/pathFollower/: package.xml
ros/planner/: CMakeLists.txt  package.xml
ros/visualizer/: CMakeLists.txt  package.xml
src/: dvf_planner_node.py  dvf_planner_viz.py  m2f_node.py  pathFollower.cpp  rosutil.py  vip_algo.py  viplanner_node.py  viplanner_viz.py
traj_cost_opt/: __init__.py  traj_cost.py  traj_opt.py  traj_viz.py  tsdf_map.py
utils/: eval_utils.py  m2f_utils.py  mesh_investigator.py  odom_transform.py  rosbag_extractor.py  rosbag_extrator.py  rosutil.py  trainer.py  warp_utils.py
viplanner/: autoencoder.py  cost_builder.py  depth_reconstruct.py  eval_real.py  eval_real_dynamic.py  eval_real_static.py  eval_sim.py  eval_sim_static.py  m2f_overfit.py  matterport_all.py  model_speedup.py  multi_env.py  rosbag_modifier.py  segments_download.py  segments_prelabel.py  train.py  traj_viz.py  view_pcd.py  vip_algo.py
viplanner/config/: __init__.py  coco_meta.py  coco_sem_meta.py  costmap_cfg.py  learning_cfg.py  semantic_cfg.py  viplanner_sem_meta.py
viplanner/cost_maps/: cost_to_pcd.py  sem_cost_map.py  tsdf_cost_map.py
viplanner/dataset/: __init__.py  dataloader.py  dataset.py
viplanner/eval/: eval_real_dynamic.py  eval_real_static.py  eval_sim_static.py
viplanner/intern/: README.md
viplanner/plannernet/: PlannerNet.py  __init__.py  autoencoder.py  rgb_encoder.py  rgb_sem_encoder.py
viplanner/traj_cost_opt/: traj_cost.py  traj_opt.py  traj_viz.py
viplanner/utils/: dataset.py  (+18 more)
visualizer/: CMakeLists_open3d.txt  README.md
(+113 files in other folders)
