[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viplanner"
version = "0.1.0"
description = "Visual Imperative Planner for Legged Robots"
authors = [{name = "Pascal Roth", email = "rothpa@ethz.ch"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["robotics", "planning", "legged-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "torchaudio>=0.13.1",
    "PyYAML==6.0",
    "tqdm",
    "matplotlib",
    "opencv-python-headless",
    "networkx",
    "scipy",
    # 'detectron2 @ git+https://github.com/facebookresearch/detectron2.git',  # FIXME: install not working automatically
    "open3d==0.13.0",
    # training only
    "pypose",
    "wandb==0.14.0",
    # m2f
    'cython',
    'scipy',
    'shapely',
    'timm',  # ==3.2
    'h5py',
    'submitit',
    'scikit-image',
    'panopticapi @ git+https://github.com/cocodataset/panopticapi.git',
]

[project.urls]
homepage = "https://github.com/pascal-roth/viplanner"
repository = "https://github.com/pascal-roth/viplanner.git"

[tool.setuptools.packages]
find = {}
